--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "seadronix-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,5 +11,15 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bunnycheese29/seadronix-server.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bunnycheese29/seadronix-server/issues"
+  },
+  "homepage": "https://github.com/bunnycheese29/seadronix-server#readme",
+  "description": ""
 }
